# SI

./: .gitignore  CLAUDE.md  LICENSE  PUSH.md  README.md  pyproject.toml  si-research-status-5-3-2026.md
.claude/skills/: si-monitor.md
configs/: tier1_e4b.yaml  tier2_26b.yaml
docs/: 00-overview.md  01-sources.md  02-hardware.md  03-stack.md  04-implementation.md  05-evaluation.md  06-risks.md  07-architecture.md  b70-machine-setup.md  research-scan.md
scripts/: 00_smoke_test.sh  01_phase1_run.sh  02_anchor_eval.sh  anchor_chunked.sh  bootstrap.sh  humaneval_smoke.py  lcb_anchor_sglang.py  merge_and_anchor.py  phase1_loop.sh  phase2_orchestrate.py  phase2_propose.py  phase2_score.py  phase2_smoke.py  phase2_solve.py  run_next_after_bon16.sh  smoke_e2e.py
src/si/: __init__.py  anchor.py  cli.py  config.py  contracts.py  dpo.py  elo.py  humaneval.py  islands.py  livecodebench.py  llm.py  llm_sglang.py  loop.py  match.py  parsers.py  phase2_ops.py  population.py  prompts.py  proposer.py  proposer_train.py  solver.py  ssd.py  taskio.py  trainer.py  trainer_dpo.py  trainer_rlzvp.py  trainer_ssd.py  trainer_unsloth.py  verifier.py
tests/: test_anchor.py  test_elo.py  test_islands.py  test_loop.py  test_match.py  test_parsers.py  test_phase2_ops.py  test_population.py  test_rlzvp.py  test_ssd.py  test_taskio.py  test_trainer.py  test_verifier.py
